# kernel

./: Cargo.toml  Makefile  boot.asm  boot.nasm  history.txt  linker.ld  load.sh  run.sh  test.asm
.config/: config.toml
backups/: cash.nasm  stage1.nasm  stage2.nasm  stage3.nasm  stage4.nasm
src/: lib.rs  macros.rs  main.rs  vga.rs
src/spin/: mod.rs
