[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[profile.release]
panic = "abort"
lto = true

[lib]
name = "kernel"      # This allows 'use kernel::...'
path = "src/main.rs" # For now, let's keep your code in main.rs
crate-type = ["staticlib"] # THIS IS THE KEY: it creates
test = false    # This stops Cargo from pulling in 'std' for tests
bench = false   # This stops Cargo from pulling in 'std' for benches

[dependencies]

